--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/react": "^0.2.0",
     "@astrojs/tailwind": "^0.2.1",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "astro": "^1.0.0-beta.56",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.0.24"
   }
 }
